# lithos

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
bins/obsidian/: Cargo.toml
bins/obsidian/src/: main.rs
bins/onyx/: Cargo.toml
bins/onyx/src/: main.rs
config/obsidian/: config.toml
config/onyx/: config.toml
crates/lithos/lithos-config/: Cargo.toml
crates/lithos/lithos-core/: Cargo.toml
crates/lithos/lithos-events/: Cargo.toml
crates/lithos/lithos-events/src/: lib.rs  top_of_the_book.rs
crates/lithos/lithos-icc/: Cargo.toml
crates/lithos/lithos-icc/src/: broadcast.rs  lib.rs  ring.rs  seqlock.rs  shm_layout.rs
crates/lithos/lithos-icc/tests/: e2e_mmap.rs
crates/lithos/lithos-journal/: Cargo.toml
crates/lithos/lithos-mmap/: Cargo.toml
crates/lithos/lithos-mmap/src/: lib.rs
crates/lithos/lithos-perf-recorder/: Cargo.toml
crates/lithos/lithos-perf-recorder/src/: lib.rs
crates/obsidian/obsidian-config/: Cargo.toml
crates/obsidian/obsidian-config/src/: config.rs
crates/obsidian/obsidian-core/: Cargo.toml
crates/obsidian/obsidian-core/src/: lib.rs  websocket_manager.rs
crates/obsidian/obsidian-core/src/dto/: binance.rs  mod.rs
crates/obsidian/obsidian-engine/: Cargo.toml
crates/obsidian/obsidian-engine/src/: lib.rs
crates/obsidian/obsidian-md/: Cargo.toml
crates/obsidian/obsidian-util/: Cargo.toml
crates/obsidian/obsidian-util/benches/: binance_parse.rs
crates/obsidian/obsidian-util/src/: binance_book_ticker.rs  floating_parse.rs  lib.rs  timestamp.rs
crates/onyx/onyx-config/: Cargo.toml
crates/onyx/onyx-config/src/: config.rs  lib.rs
crates/onyx/onyx-core/: Cargo.toml
crates/onyx/onyx-core/src/: lib.rs  market_state.rs  market_state_manager.rs
crates/onyx/onyx-engine/: Cargo.toml
crates/onyx/onyx-engine/src/: lib.rs
crates/onyx/onyx-md/: Cargo.toml
docs/: BENCHMARKING_PROCEDURE_GUIDE.md  PERF_GUIDE.md  market_microstructure.md  vec_vs_hashmap.md
perf/: Cargo.toml  PERF_GUIDE.md  PERF_SUITE.md  PLOT_READING_GUIDE.md
perf/benches/: bench_broadcast.rs  bench_hot_path.rs  bench_market_state.rs  bench_parsing.rs  bench_pipeline.rs  bench_timestamp.rs
perf/scripts/: plot_results.py  run_perf.sh
perf/src/: lib.rs  report.rs
