[workspace]
resolver = "2"
members = [
  "bins/obsidian",
  "bins/onyx",
  "crates/lithos/*",
  "crates/obsidian/*",
  "crates/onyx/*",
  "perf",
]

[workspace.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }