[package]
name = "obsidian"
version = "0.1.0"
edition = "2024"

[dependencies]
lithos-events = {path = "../../crates/lithos/lithos-events"}
lithos-icc = {path = "../../crates/lithos/lithos-icc"}
obsidian-config ={ path = "../../crates/obsidian/obsidian-config"}
obsidian-engine = {path = "../../crates/obsidian/obsidian-engine"}
tracing-subscriber = { workspace = true }
tracing = { workspace = true }