[package]
name = "onyx"
version = "0.1.0"
edition = "2024"

[dependencies]
lithos-events = {path = "../../crates/lithos/lithos-events"}
onyx-engine = {path = "../../crates/onyx/onyx-engine"}
onyx-config = {path = "../../crates/onyx/onyx-config"}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
anyhow = "1.0.99"